--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     color:#fff;
     padding: 30px 40px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-
+    backdrop-filter: blur(32px);
 }
 
 .container h1 {
@@ -45,10 +45,83 @@ body {
     width: 100%;
     height: 100%;
     background: transparent;
-    border: none;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
     outline: none;
     font-size: 16px;
     color: #fff;
     padding: 20px 45px 20px 20px;
 
 }
+
+.input-box input::placeholder {
+    color: #fff;
+}
+
+.input-box i {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    font-size: 20px;
+    color: #fff;
+    transform: translateY(-50%);
+}
+
+.remember-forgot {
+    display: flex;
+    justify-content: space-between;
+    margin: -15px 0 15px;
+}
+
+.remember-forgot label input {
+    accent-color: #fff;
+    margin-right: 5px;
+}
+
+.remember-forgot a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.remember-forgot a:hover { 
+    text-decoration: underline;
+}
+
+.login {
+    width: 100%;
+    height: 50px;
+    background: #fff;
+    border: none;
+    border-radius: 40px;
+    color: #333;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin-bottom: 16px;
+
+}
+
+.login:hover {
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .2);
+    color:#fff;
+    transition: .5s;
+}
+
+.register-link {
+    font-size: 14px;    
+    text-align: center;
+    margin-top: 20px 0 15px;
+}
+
+.register-link a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: 600;
+}
+
+.register-link a:hover {
+    text-decoration: underline;
+}   
+
